# rubik-s-cube-solver

./: .gitignore  README.md  render.yaml
backend/: CMakeLists.txt  Dockerfile  Makefile  package-lock.json  package.json
backend/src/: server.js
backend/src/utils/: cubeValidator.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CubeConfigurator.jsx  RubiksCube.jsx  VideoInput.jsx
frontend/src/utils/: colorDetection.js  cubeState.js
